--- a/src/ToDoList.Api/appsettings.json
+++ b/src/ToDoList.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-6P736LL;Database=ToDoList;User Id=sa; Password=Todolist24app"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
