--- a/src/TodoService/appsettings.json
+++ b/src/TodoService/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-6P736LL;Database=ToDoList;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-6P736LL;Database=ToDoList;User Id=sa; Password=Todolist24app;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
