--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -9,11 +9,27 @@ services:
       - "5001:443"
       - "5000:80"
     volumes:
-      - ${APPDATA}/Microsoft/UserSecrets:C:\Users\ContainerUser\AppData\Roaming\Microsoft\UserSecrets:ro
-      - ${APPDATA}/ASP.NET/Https:C:\Users\ContainerUser\AppData\Roaming\ASP.NET\Https:ro
-  
+      - C:\Users\Eugene\AppData\Roaming\Microsoft\UserSecrets:/appdata/Microsoft/UserSecrets
+      - C:\Users\Eugene\AppData\Roaming\ASP.NET\Https:/appdata/ASP.NET/Https
+
+  todoservice:
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    depends_on:
+      rabbitmq:
+       condition: service_healthy
+      sql-server:
+       condition: service_started
+    environment:
+      DefaultConnection: "Server=sql-server;Database=ToDoList;User Id=sa; Password=Todolist24app;TrustServerCertificate=True"
+
   rabbitmq:
     image: rabbitmq:3-management
+    healthcheck:
+      test: ["CMD", "rabbitmqctl", "status"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
     ports:
       - "5672:5672"
       - "15672:15672"
@@ -21,6 +37,7 @@ services:
       - rabbitmqdata:/var/lib/rabbitmq/mnesia
 
   sql-server:
+    user: root
     image: mcr.microsoft.com/mssql/server
     environment:
       SA_PASSWORD: "Todolist24app"
