--- a/src/TodoService/ToDoService.csproj
+++ b/src/TodoService/ToDoService.csproj
@@ -30,4 +30,8 @@
   <ItemGroup>
     <ProjectReference Include="..\ToDoList.Models\ToDoList.Models.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
 </Project>
